# easytype

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.sample.toml  pyproject.toml
.github/workflows/: tests.yml
autostart/: easytype.desktop
docs/superpowers/handoffs/: 2026-05-29-phase1-to-phase2.md
docs/superpowers/plans/: 2026-05-29-easytype-engine.md  2026-05-29-easytype-phase2-gui.md
docs/superpowers/specs/: 2026-05-29-easytype-design.md  2026-05-29-easytype-phase2-gui-design.md  2026-07-09-pause-media-while-recording-design.md
src/easytype/: __main__.py  autostart.py  chords.py  cli.py  config.py  controller.py  dictionary.py  engine.py  formatter.py  indicator.py  keycodes.py  listener.py  media.py  polish.py  preflight.py  recorder.py  supervisor.py  transcriber.py
src/easytype/gui/: app.py  settings.py  style.qss
src/easytype/injector/: __init__.py  x11.py
systemd/: easytype.service
tests/: test_autostart.py  test_chords.py  test_config.py  test_controller.py  test_dictionary.py  test_formatter.py  test_indicator.py  test_injector_x11.py  test_keycodes.py  test_listener.py  test_media.py  test_polish.py  test_preflight.py  test_supervisor.py  test_transcriber.py
