[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easytype"
version = "0.1.0"
description = "System-wide local voice dictation for Linux (push-to-talk and toggle)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jeff Harlan" }]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
    "evdev>=1.6",
    "numpy>=1.24",
    "tomlkit>=0.12",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
easytype = "easytype.cli:main"
easytype-gui = "easytype.gui.app:main"

[project.urls]
Homepage = "https://github.com/jeffharlan/easytype"
Repository = "https://github.com/jeffharlan/easytype"
Issues = "https://github.com/jeffharlan/easytype/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
easytype = ["gui/style.qss"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
